--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "postinstall": "npm run copy-libs",
     "update-deps": "npm update",
     "postupdate-deps": "npm run copy-libs",
-    "copy-libs": "cpx \"node_modules/{angular,angular-*,html5-boilerplate/dist,alissa-todo-react-query}/**/*\" app/lib -C",
-    "prestart": "npm install",
+    "copy-libs": "cpx \"node_modules/{angular,angular-*,html5-boilerplate/dist,alissa-todo-react-query}/**/*\" app/lib -C -L",
+    "prestart": "npm run copy-libs",
     "start": "http-server -a localhost -p 8000 -c-1 ./app",
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
